--- a/views/partials/home.hbs
+++ b/views/partials/home.hbs
@@ -1,45 +1,4 @@
 <section  class="mod icn-before {{#if mod_name}}{{mod_name}}{{/if}}" 
-          data-role="mod"  
+          data-role="mod" id="particles-js"  
           {{#if data_conf}}data-conf="{{data_conf}}"{{/if}}>
-  <div class="search-box">
-    <div class="form-title">
-      <h2>Finally, <em>get</em> the Metadata you need,</h2>
-      <h4>to build a proper Raspberry Pi game collection.</h4>
-    </div>
-    <form data-role="game_search_form" method="POST" action="/results">
-      <div class="form-wrapper">
-        <div class="game-name-wrapper flex icn-before">
-          <label class="form-label game-name hidden" for="game_name">Game Name</label>
-          <input id="game_name" name="game_name" autocomplete="off" class="game-name-input flex-item-grow" type="text" maxlength="60" data-required="true" placeholder="Game Name"/>
-        </div>
-        <div class="game-platform-wrapper flex">
-          <label class="form-label game-name hidden" for="game_platform">Game Name</label>
-          <input id="game_platform" name="game_platform" autocomplete="off" class="game-platform-input flex-item-grow" type="text" maxlength="60" placeholder="Game Platform" data-value=""/>
-          {{#if data}}
-          <ul class="platform-results hidden flex flex-item-grow" data-role="results_list">
-            {{#each data}}
-              {{#if this.id}}
-               <li class="platform-item hidden" data-game-id="{{this.id}}" data-value="{{this.name}}" data-role="result">{{this.name}}</li>
-              {{/if}}
-            {{/each}}
-          </ul>
-          {{/if}}
-        </div>
-      </div>
-      <button class="submit-button button flex flex-item-grow" type="submit" data-role="search_button"/>
-        <span class="submit-text flex-item-grow" data-role="submit_text">Find That Game!</span>
-        <div class='uil-rolling-css flex-item-grow hidden' data-role="loader">
-          <div>
-              <div></div>
-              <div></div>
-          </div>
-        </div>
-      </button>
-    </form>
-    <div class="learn-more flex">
-      <h4 class="flex-item-base">New to PortcuPi?</h4>
-      <a class="learn-more-link flex-item-base" href="">Learn More</a>
-    </div>
-  </div>
-  <section class="mod-background"></section>
 </section>
