adding in font styling

--- a/views/partials/home.hbs
+++ b/views/partials/home.hbs
@@ -1,4 +1,7 @@
 <section  class="mod icn-before {{#if mod_name}}{{mod_name}}{{/if}}" 
           data-role="mod" id="particles-js"  
           {{#if data_conf}}data-conf="{{data_conf}}"{{/if}}>
+
+  <h1 style="color: white; padding: 10px;">DEVELONAUT</h1>
+
 </section>
