--- a/views/partials/home.hbs
+++ b/views/partials/home.hbs
@@ -1,7 +1,20 @@
-<section  class="mod icn-before {{#if mod_name}}{{mod_name}}{{/if}}" 
+<section  class="mod flex {{#if mod_name}}{{mod_name}}{{/if}}" 
           data-role="mod" id="particles-js"  
           {{#if data_conf}}data-conf="{{data_conf}}"{{/if}}>
 
-  <h1 style="color: white; padding: 10px;">DEVELONAUT</h1>
+{{!--     <nav class="nav flex" data-role="nav">
+      <ul class="flex flex-item">
+          <li class="logo icn-before" data-role="logo"></li>
+          <li class="typeface icn-before"></li>
+      </ul>
+    </nav> --}}
 
+
+      <ul class="home-intro flex flex-item">
+          <li class="logo icn-before" data-role="logo"></li>
+          <li class="typeface icn-before"></li>
+      </ul>
+
+{{!--     <div class="typeface icn-before"></div>
+ --}}
 </section>
