--- a/private/scss/common.scss
+++ b/private/scss/common.scss
@@ -43,7 +43,7 @@ body {
   }
 
   &:before {
-    background-position: 0 0;
+    background: url(/images/develonaut_logo.svg);
     width: 75px;
     height: 75px;
   }
@@ -58,21 +58,6 @@ body {
     background-position: -105px -22px;
     width: 341px;
     height: 32px;
-  }
-}
-
-.nav {
-  padding: 10px;
-
-  ul {
-    list-style: none;
-    
-    .typeface {
-      position: relative;
-      left: 0;
-      top: 0;
-      transform: scale(0.5);
-    }
   }
 }
 
@@ -111,5 +96,10 @@ body {
 }
 
 .site-wrapper {
-  padding: 7px;
+  top: 0px;
+  left: 0;
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
 }
